samples/_failures_safe/1761004493_4692a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b870928.c: In function ‘main’:
./samples/SAFE/__tmp_2b870928.c:156:5: error: expected expression at end of input
  156 |     graph_add_edge(&g, a, b,
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_2b870928.c:156:5: error: expected declaration or statement at end of input
